<resources>
    <string name="app_name">SportApplication</string>
    <string name="score_separator">:</string>
    <string name="select_country">Select country</string>
    <string name="select_league">Select league</string>
    <string name="connection_time_error">Connection time expired. Please, try again</string>
    <string name="unknown_error">Unknown error</string>
    <string name="internet_connection_error">Internet connection error</string>
    <string name="no_data_error">There were no matches scheduled in this league in this range</string>
    <string name="refresh">Refresh</string>
    <string name="to_news">To News</string>
    <string name="welcome">Welcome!</string>
    <string name="matches">Matches</string>
    <string name="news">News</string>
    <string name="coach">Coach:</string>
    <string name="team_composition">Team composition</string>
    <string name="age">Age: %s</string>
    <string name="number">№: %s</string>
    <string name="country">Country: %s</string>
</resources>