<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:visibility="gone"
        android:id="@+id/welcome_text"
        android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/navigation_layout"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/to_matches_button"
            android:layout_marginBottom="4dp"
            android:text="@string/matches"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/to_news_button"
            android:text="@string/news"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>