<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/app_name"
        app:menu="@menu/refresh_menu"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:padding="6dp"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_begin="10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            app:layout_constraintGuide_end="10dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/team_image"
            tools:src="@drawable/mancity"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            android:layout_width="150dp"
            android:layout_height="150dp" />

        <TextView
            tools:text="Manchester City"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/team_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/team_image"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintTop_toTopOf="@id/team_image"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/coach"
            android:textSize="18sp"
            android:text="@string/coach"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/team_name"
            app:layout_constraintTop_toBottomOf="@id/team_name" />

        <TextView
            android:id="@+id/coach_name"
            android:textSize="18sp"
            tools:text="Pep Guardiola"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/coach"
            app:layout_constraintTop_toTopOf="@id/coach"
            app:layout_constraintEnd_toEndOf="@id/end_guideline" />


        <TextView
            android:id="@+id/coach_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/coach"
            app:layout_constraintTop_toBottomOf="@id/coach"
            tools:text="Age: 54" />

        <TextView
            android:id="@+id/coach_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/coach"
            app:layout_constraintTop_toBottomOf="@id/coach_age"
            app:layout_constraintBottom_toBottomOf="@id/team_image"
            tools:text="Coutry: Spain" />

        <TextView
            android:id="@+id/team_composition_title"
            android:text="@string/team_composition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/team_image"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/team_recycler_view"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/team_composition_title"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" />

    <ProgressBar
        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/loading_progress_bar"
        android:layout_width="wrap_content"
        android:indeterminateDrawable="@drawable/loading_image"
        android:layout_height="match_parent" />

</LinearLayout>
